# ChatGPT_Repos

./: README.md  pyproject.toml
src/svg_to_pptx/: __init__.py  cli.py  models.py  parser.py  pptx_builder.py
tests/: test_integration.py
